# LCOM

./: CMakeLists.txt  README.md  proj.rar
lab0/: hello  hello.c
lab2/: lab2  lab2.c  lab2.h  output.txt  timer.c  timer.h  trace.txt  utils.c  utils.h
lab3/: CMakeLists.txt  Makefile  i8042.h  keyboard.c  keyboard.h  lab3  lab3.c  output.txt  trace.txt
lab4/: Makefile  i8042.h  keyboard.c  lab4  lab4.c  mouse.c  mouse.h  trace.txt
lab5/: Makefile  i8042.h  keyboard.c  lab5  lab5.c  trace.txt  video_gr.c  video_gr.h
proj/doc/: Doxyfile  ProjetoLC.docx  ~$ojetoLC.docx
proj/doc/html/: _r_e_a_d_m_e_8md.html  alphabet_8h.html  alphabet_8h__dep__incl.map  alphabet_8h__dep__incl.md5  alphabet_8h__incl.map  alphabet_8h__incl.md5  alphabet_8h_source.html  annotated.html  apple_8c.html  apple_8c__incl.map  apple_8c__incl.md5  apple_8c_a88cae4ca9c2c473484fc0734079d7413_icgraph.md5  apple_8c_ab7db602b92bb5aac8acef76d0f054841_cgraph.md5  apple_8c_ab7db602b92bb5aac8acef76d0f054841_icgraph.map  apple_8c_ab7db602b92bb5aac8acef76d0f054841_icgraph.md5  apple_8c_ace2ad30113430906b4f158be7492cde0_icgraph.map  apple_8h.html  apple_8h__dep__incl.map  apple_8h__dep__incl.md5  apple_8h__incl.map  apple_8h__incl.md5  apple_8h_a0326b4d36f3290250a33a8c8856aa69e_icgraph.md5  apple_8h_a12d22c56833a471785704d4ee4d97016_cgraph.map  apple_8h_a88cae4ca9c2c473484fc0734079d7413_icgraph.map  apple_8h_a88cae4ca9c2c473484fc0734079d7413_icgraph.md5  apple_8h_a8f9d2a63d2446a7cd834e218741d11df_icgraph.map  apple_8h_ab7db602b92bb5aac8acef76d0f054841_cgraph.map  apple_8h_ab7db602b92bb5aac8acef76d0f054841_cgraph.md5  apple_8h_ab7db602b92bb5aac8acef76d0f054841_icgraph.map  apple_8h_ab7db602b92bb5aac8acef76d0f054841_icgraph.md5  apple_8h_ace2ad30113430906b4f158be7492cde0_icgraph.map  apple_8h_ace2ad30113430906b4f158be7492cde0_icgraph.md5  apple_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  game_8c.html  game_8c__incl.map  game_8c__incl.md5  (+524 more)
proj/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_13.js  defines_14.js  defines_15.js  defines_16.js  defines_17.js  defines_18.js  (+68 more)
proj/src/: .txt  Makefile  alphabet.h  apple.c  apple.h  game.c  game.h  grass.c  grass.h  highscores.txt  i8042.h  keyboard.c  keyboard.h  menu.c  menu.h  mouse.c  mouse.h  output.txt  proj  proj.c  proj.h  rtc.c  rtc.h  snake.c  snake.h  timer.c  trace.txt  utils.c  utils.h  video_gr.c  video_gr.h  xpm.h
proj/src/sprites/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm  8.xpm  9.xpm  afternoonbackground.xpm  apple.xpm  black_background.xpm  cursor.xpm  daybackground.xpm  grass.xpm  highlight_button.xpm  logotip.xpm  menu.xpm  menu_background.xpm  nightbackground.xpm  scoreboard.xpm  snakebodyhorizontal.xpm  snakebodyvertical.xpm  snakeheaddown.xpm  snakeheadleft.xpm  snakeheadright.xpm  snakeheadup.xpm  snaketaildown.xpm  snaketailleft.xpm  snaketailright.xpm  snaketailup.xpm  snaketurndownleft.xpm  snaketurndownright.xpm  snaketurnupleft.xpm  snaketurnupright.xpm  writename.xpm  youLost.xpm  yourScoreWas.xpm
proj/src/sprites/ABC/: A.xpm  B.xpm  C.xpm  D.xpm  E.xpm  F.xpm  G.xpm  H.xpm  I.xpm  J.xpm  K.xpm  L.xpm  M.xpm  N.xpm  O.xpm  P.xpm  Q.xpm  R.xpm  S.xpm  T.xpm  U.xpm  V.xpm  W.xpm  X.xpm  Y.xpm  Z.xpm
