cmake_minimum_required(VERSION 3.21)
project(shared)

set(CMAKE_CXX_STANDARD 14)

include_directories(.minix-src)
include_directories(.minix-src/include)
include_directories(.minix-src/include/altq)
include_directories(.minix-src/include/arpa)
include_directories(.minix-src/include/atf-c)
include_directories(.minix-src/include/atf-c++)
include_directories(.minix-src/include/c++)
include_directories(.minix-src/include/clang-3.6)
include_directories(.minix-src/include/ddekit)
include_directories(.minix-src/include/ddekit/minix)
include_directories(.minix-src/include/dev)
include_directories(.minix-src/include/dev/i2c)
include_directories(.minix-src/include/dev/pci)
include_directories(.minix-src/include/event2)
include_directories(.minix-src/include/fs)
include_directories(.minix-src/include/fs/puffs)
include_directories(.minix-src/include/fs/udf)
include_directories(.minix-src/include/fs/v7fs)
include_directories(.minix-src/include/g++)
include_directories(.minix-src/include/i386)
include_directories(.minix-src/include/isofs)
include_directories(.minix-src/include/isofs/cd9660)
include_directories(.minix-src/include/lcom)
include_directories(.minix-src/include/libdde)
include_directories(.minix-src/include/lutok)
include_directories(.minix-src/include/lzma)
include_directories(.minix-src/include/machine)
include_directories(.minix-src/include/minix)
include_directories(.minix-src/include/msdosfs)
include_directories(.minix-src/include/net)
include_directories(.minix-src/include/net/gen)
include_directories(.minix-src/include/net80211)
include_directories(.minix-src/include/netatalk)
include_directories(.minix-src/include/netinet)
include_directories(.minix-src/include/netinet6)
include_directories(.minix-src/include/netmpls)
include_directories(.minix-src/include/netpgp)
include_directories(.minix-src/include/openssl)
include_directories(.minix-src/include/pcap)
include_directories(.minix-src/include/ppath)
include_directories(.minix-src/include/prop)
include_directories(.minix-src/include/protocols)
include_directories(.minix-src/include/readline)
include_directories(.minix-src/include/rpcsvc)
include_directories(.minix-src/include/ssp)
include_directories(.minix-src/include/sys)
include_directories(.minix-src/include/ufs)
include_directories(.minix-src/include/ufs/ext2fs)
include_directories(.minix-src/include/ufs/ffs)
include_directories(.minix-src/include/ufs/lfs)
include_directories(.minix-src/include/ufs/mfs)
include_directories(.minix-src/include/ufs/ufs)
include_directories(.minix-src/include/uvm)
include_directories(.minix-src/include/x86)
include_directories(lab2)
include_directories(lab3)

add_executable(shared
        .minix-src/include/altq/if_altq.h
        .minix-src/include/arpa/ftp.h
        .minix-src/include/arpa/inet.h
        .minix-src/include/arpa/nameser.h
        .minix-src/include/arpa/nameser_compat.h
        .minix-src/include/arpa/telnet.h
        .minix-src/include/arpa/tftp.h
        .minix-src/include/atf-c/build.h
        .minix-src/include/atf-c/check.h
        .minix-src/include/atf-c/config.h
        .minix-src/include/atf-c/defs.h
        .minix-src/include/atf-c/error.h
        .minix-src/include/atf-c/error_fwd.h
        .minix-src/include/atf-c/macros.h
        .minix-src/include/atf-c/tc.h
        .minix-src/include/atf-c/tp.h
        .minix-src/include/atf-c/utils.h
        .minix-src/include/atf-c++/build.hpp
        .minix-src/include/atf-c++/check.hpp
        .minix-src/include/atf-c++/config.hpp
        .minix-src/include/atf-c++/macros.hpp
        .minix-src/include/atf-c++/tests.hpp
        .minix-src/include/atf-c++/utils.hpp
        .minix-src/include/c++/complex.h
        .minix-src/include/c++/cxxabi.h
        .minix-src/include/c++/tgmath.h
        .minix-src/include/clang-3.6/__wmmintrin_aes.h
        .minix-src/include/clang-3.6/__wmmintrin_pclmul.h
        .minix-src/include/clang-3.6/adxintrin.h
        .minix-src/include/clang-3.6/ammintrin.h
        .minix-src/include/clang-3.6/avx2intrin.h
        .minix-src/include/clang-3.6/avx512bwintrin.h
        .minix-src/include/clang-3.6/avx512erintrin.h
        .minix-src/include/clang-3.6/avx512fintrin.h
        .minix-src/include/clang-3.6/avx512vlbwintrin.h
        .minix-src/include/clang-3.6/avx512vlintrin.h
        .minix-src/include/clang-3.6/avxintrin.h
        .minix-src/include/clang-3.6/bmi2intrin.h
        .minix-src/include/clang-3.6/bmiintrin.h
        .minix-src/include/clang-3.6/cpuid.h
        .minix-src/include/clang-3.6/emmintrin.h
        .minix-src/include/clang-3.6/f16cintrin.h
        .minix-src/include/clang-3.6/fma4intrin.h
        .minix-src/include/clang-3.6/fmaintrin.h
        .minix-src/include/clang-3.6/ia32intrin.h
        .minix-src/include/clang-3.6/immintrin.h
        .minix-src/include/clang-3.6/lzcntintrin.h
        .minix-src/include/clang-3.6/mm3dnow.h
        .minix-src/include/clang-3.6/mm_malloc.h
        .minix-src/include/clang-3.6/mmintrin.h
        .minix-src/include/clang-3.6/nmmintrin.h
        .minix-src/include/clang-3.6/pmmintrin.h
        .minix-src/include/clang-3.6/popcntintrin.h
        .minix-src/include/clang-3.6/prfchwintrin.h
        .minix-src/include/clang-3.6/rdseedintrin.h
        .minix-src/include/clang-3.6/rtmintrin.h
        .minix-src/include/clang-3.6/shaintrin.h
        .minix-src/include/clang-3.6/smmintrin.h
        .minix-src/include/clang-3.6/stdatomic.h
        .minix-src/include/clang-3.6/tbmintrin.h
        .minix-src/include/clang-3.6/tmmintrin.h
        .minix-src/include/clang-3.6/wmmintrin.h
        .minix-src/include/clang-3.6/x86intrin.h
        .minix-src/include/clang-3.6/xmmintrin.h
        .minix-src/include/clang-3.6/xopintrin.h
        .minix-src/include/ddekit/minix/msg_queue.h
        .minix-src/include/ddekit/minix/pci.h
        .minix-src/include/ddekit/assert.h
        .minix-src/include/ddekit/attribs.h
        .minix-src/include/ddekit/condvar.h
        .minix-src/include/ddekit/ddekit.h
        .minix-src/include/ddekit/debug.h
        .minix-src/include/ddekit/initcall.h
        .minix-src/include/ddekit/inline.h
        .minix-src/include/ddekit/interrupt.h
        .minix-src/include/ddekit/lock.h
        .minix-src/include/ddekit/memory.h
        .minix-src/include/ddekit/panic.h
        .minix-src/include/ddekit/pci.h
        .minix-src/include/ddekit/pgtab.h
        .minix-src/include/ddekit/printf.h
        .minix-src/include/ddekit/resources.h
        .minix-src/include/ddekit/semaphore.h
        .minix-src/include/ddekit/thread.h
        .minix-src/include/ddekit/timer.h
        .minix-src/include/ddekit/types.h
        .minix-src/include/ddekit/usb.h
        .minix-src/include/dev/i2c/i2c_io.h
        .minix-src/include/dev/pci/amrio.h
        .minix-src/include/dev/pci/amrreg.h
        .minix-src/include/dev/pci/if_lmc.h
        .minix-src/include/dev/pci/mlyio.h
        .minix-src/include/dev/pci/mlyreg.h
        .minix-src/include/dev/pci/pcidevs.h
        .minix-src/include/dev/pci/pcidevs_data.h
        .minix-src/include/dev/pci/pciio.h
        .minix-src/include/dev/pci/pcireg.h
        .minix-src/include/dev/pci/tgareg.h
        .minix-src/include/dev/pci/tweio.h
        .minix-src/include/dev/pci/twereg.h
        .minix-src/include/dev/vndvar.h
        .minix-src/include/event2/buffer.h
        .minix-src/include/event2/buffer_compat.h
        .minix-src/include/event2/bufferevent.h
        .minix-src/include/event2/bufferevent_compat.h
        .minix-src/include/event2/bufferevent_ssl.h
        .minix-src/include/event2/bufferevent_struct.h
        .minix-src/include/event2/dns.h
        .minix-src/include/event2/dns_compat.h
        .minix-src/include/event2/dns_struct.h
        .minix-src/include/event2/event-config.h
        .minix-src/include/event2/event.h
        .minix-src/include/event2/event_compat.h
        .minix-src/include/event2/event_struct.h
        .minix-src/include/event2/http.h
        .minix-src/include/event2/http_compat.h
        .minix-src/include/event2/http_struct.h
        .minix-src/include/event2/keyvalq_struct.h
        .minix-src/include/event2/listener.h
        .minix-src/include/event2/rpc.h
        .minix-src/include/event2/rpc_compat.h
        .minix-src/include/event2/rpc_struct.h
        .minix-src/include/event2/tag.h
        .minix-src/include/event2/tag_compat.h
        .minix-src/include/event2/thread.h
        .minix-src/include/event2/util.h
        .minix-src/include/fs/puffs/puffs_msgif.h
        .minix-src/include/fs/udf/ecma167-udf.h
        .minix-src/include/fs/udf/udf_mount.h
        .minix-src/include/fs/v7fs/v7fs.h
        .minix-src/include/fs/v7fs/v7fs_args.h
        .minix-src/include/g++/FlexLexer.h
        .minix-src/include/i386/ansi.h
        .minix-src/include/i386/aout_machdep.h
        .minix-src/include/i386/apmvar.h
        .minix-src/include/i386/archconst.h
        .minix-src/include/i386/archtypes.h
        .minix-src/include/i386/asm.h
        .minix-src/include/i386/bios.h
        .minix-src/include/i386/bioscall.h
        .minix-src/include/i386/bootinfo.h
        .minix-src/include/i386/bswap.h
        .minix-src/include/i386/byte_swap.h
        .minix-src/include/i386/cdefs.h
        .minix-src/include/i386/cmos.h
        .minix-src/include/i386/cpu.h
        .minix-src/include/i386/cputypes.h
        .minix-src/include/i386/disklabel.h
        .minix-src/include/i386/diskparm.h
        .minix-src/include/i386/elf.h
        .minix-src/include/i386/elf_machdep.h
        .minix-src/include/i386/endian.h
        .minix-src/include/i386/endian_machdep.h
        .minix-src/include/i386/fenv.h
        .minix-src/include/i386/float.h
        .minix-src/include/i386/fpu.h
        .minix-src/include/i386/frame.h
        .minix-src/include/i386/freebsd_machdep.h
        .minix-src/include/i386/gdt.h
        .minix-src/include/i386/ibcs2_machdep.h
        .minix-src/include/i386/ieee.h
        .minix-src/include/i386/ieeefp.h
        .minix-src/include/i386/int86.h
        .minix-src/include/i386/int_const.h
        .minix-src/include/i386/int_fmtio.h
        .minix-src/include/i386/int_limits.h
        .minix-src/include/i386/int_mwgwtypes.h
        .minix-src/include/i386/int_types.h
        .minix-src/include/i386/interrupt.h
        .minix-src/include/i386/intr.h
        .minix-src/include/i386/intrdefs.h
        .minix-src/include/i386/ipcconst.h
        .minix-src/include/i386/joystick.h
        .minix-src/include/i386/kcore.h
        .minix-src/include/i386/limits.h
        .minix-src/include/i386/lock.h
        .minix-src/include/i386/math.h
        .minix-src/include/i386/mcontext.h
        .minix-src/include/i386/memory.h
        .minix-src/include/i386/mtrr.h
        .minix-src/include/i386/multiboot.h
        .minix-src/include/i386/mutex.h
        .minix-src/include/i386/param.h
        .minix-src/include/i386/partition.h
        .minix-src/include/i386/pcb.h
        .minix-src/include/i386/pci.h
        .minix-src/include/i386/pci_amd.h
        .minix-src/include/i386/pci_intel.h
        .minix-src/include/i386/pci_sis.h
        .minix-src/include/i386/pci_via.h
        .minix-src/include/i386/pio.h
        .minix-src/include/i386/pmap.h
        .minix-src/include/i386/pmc.h
        .minix-src/include/i386/ports.h
        .minix-src/include/i386/proc.h
        .minix-src/include/i386/profile.h
        .minix-src/include/i386/psl.h
        .minix-src/include/i386/pte.h
        .minix-src/include/i386/ptrace.h
        .minix-src/include/i386/reg.h
        .minix-src/include/i386/rwlock.h
        .minix-src/include/i386/segments.h
        .minix-src/include/i386/setjmp.h
        .minix-src/include/i386/signal.h
        .minix-src/include/i386/sljit_machdep.h
        .minix-src/include/i386/specialreg.h
        .minix-src/include/i386/spkr.h
        .minix-src/include/i386/stackframe.h
        .minix-src/include/i386/svr4_machdep.h
        .minix-src/include/i386/sysarch.h
        .minix-src/include/i386/trap.h
        .minix-src/include/i386/tss.h
        .minix-src/include/i386/types.h
        .minix-src/include/i386/vm.h
        .minix-src/include/i386/vm86.h
        .minix-src/include/i386/vmparam.h
        .minix-src/include/i386/wchar_limits.h
        .minix-src/include/isofs/cd9660/cd9660_extern.h
        .minix-src/include/isofs/cd9660/cd9660_mount.h
        .minix-src/include/isofs/cd9660/cd9660_node.h
        .minix-src/include/isofs/cd9660/cd9660_rrip.h
        .minix-src/include/isofs/cd9660/iso.h
        .minix-src/include/isofs/cd9660/iso_rrip.h
        .minix-src/include/lcom/lab2.h
        .minix-src/include/lcom/lab3.h
        .minix-src/include/lcom/lab4.h
        .minix-src/include/lcom/lab5.h
        .minix-src/include/lcom/lcf.h
        .minix-src/include/lcom/liblm.h
        .minix-src/include/lcom/libxpm.h
        .minix-src/include/lcom/pixmap.h
        .minix-src/include/lcom/proj.h
        .minix-src/include/lcom/timer.h
        .minix-src/include/lcom/types.h
        .minix-src/include/lcom/utils.h
        .minix-src/include/lcom/vbe.h
        .minix-src/include/lcom/video_gr.h
        .minix-src/include/lcom/xpm.h
        .minix-src/include/libdde/usb_server.h
        .minix-src/include/lutok/c_gate.hpp
        .minix-src/include/lutok/debug.hpp
        .minix-src/include/lutok/exceptions.hpp
        .minix-src/include/lutok/operations.hpp
        .minix-src/include/lutok/stack_cleaner.hpp
        .minix-src/include/lutok/state.hpp
        .minix-src/include/lutok/state.ipp
        .minix-src/include/lutok/test_utils.hpp
        .minix-src/include/lzma/base.h
        .minix-src/include/lzma/bcj.h
        .minix-src/include/lzma/block.h
        .minix-src/include/lzma/check.h
        .minix-src/include/lzma/container.h
        .minix-src/include/lzma/delta.h
        .minix-src/include/lzma/filter.h
        .minix-src/include/lzma/hardware.h
        .minix-src/include/lzma/index.h
        .minix-src/include/lzma/index_hash.h
        .minix-src/include/lzma/lzma12.h
        .minix-src/include/lzma/stream_flags.h
        .minix-src/include/lzma/version.h
        .minix-src/include/lzma/vli.h
        .minix-src/include/machine/ansi.h
        .minix-src/include/machine/aout_machdep.h
        .minix-src/include/machine/apmvar.h
        .minix-src/include/machine/archconst.h
        .minix-src/include/machine/archtypes.h
        .minix-src/include/machine/asm.h
        .minix-src/include/machine/bios.h
        .minix-src/include/machine/bioscall.h
        .minix-src/include/machine/bootinfo.h
        .minix-src/include/machine/bswap.h
        .minix-src/include/machine/byte_swap.h
        .minix-src/include/machine/cdefs.h
        .minix-src/include/machine/cmos.h
        .minix-src/include/machine/cpu.h
        .minix-src/include/machine/cputypes.h
        .minix-src/include/machine/disklabel.h
        .minix-src/include/machine/diskparm.h
        .minix-src/include/machine/elf.h
        .minix-src/include/machine/elf_machdep.h
        .minix-src/include/machine/endian.h
        .minix-src/include/machine/endian_machdep.h
        .minix-src/include/machine/fenv.h
        .minix-src/include/machine/float.h
        .minix-src/include/machine/fpu.h
        .minix-src/include/machine/frame.h
        .minix-src/include/machine/freebsd_machdep.h
        .minix-src/include/machine/gdt.h
        .minix-src/include/machine/ibcs2_machdep.h
        .minix-src/include/machine/ieee.h
        .minix-src/include/machine/ieeefp.h
        .minix-src/include/machine/int86.h
        .minix-src/include/machine/int_const.h
        .minix-src/include/machine/int_fmtio.h
        .minix-src/include/machine/int_limits.h
        .minix-src/include/machine/int_mwgwtypes.h
        .minix-src/include/machine/int_types.h
        .minix-src/include/machine/interrupt.h
        .minix-src/include/machine/intr.h
        .minix-src/include/machine/intrdefs.h
        .minix-src/include/machine/ipcconst.h
        .minix-src/include/machine/joystick.h
        .minix-src/include/machine/kcore.h
        .minix-src/include/machine/limits.h
        .minix-src/include/machine/lock.h
        .minix-src/include/machine/math.h
        .minix-src/include/machine/mcontext.h
        .minix-src/include/machine/memory.h
        .minix-src/include/machine/mtrr.h
        .minix-src/include/machine/multiboot.h
        .minix-src/include/machine/mutex.h
        .minix-src/include/machine/param.h
        .minix-src/include/machine/partition.h
        .minix-src/include/machine/pcb.h
        .minix-src/include/machine/pci.h
        .minix-src/include/machine/pci_amd.h
        .minix-src/include/machine/pci_intel.h
        .minix-src/include/machine/pci_sis.h
        .minix-src/include/machine/pci_via.h
        .minix-src/include/machine/pio.h
        .minix-src/include/machine/pmap.h
        .minix-src/include/machine/pmc.h
        .minix-src/include/machine/ports.h
        .minix-src/include/machine/proc.h
        .minix-src/include/machine/profile.h
        .minix-src/include/machine/psl.h
        .minix-src/include/machine/pte.h
        .minix-src/include/machine/ptrace.h
        .minix-src/include/machine/reg.h
        .minix-src/include/machine/rwlock.h
        .minix-src/include/machine/segments.h
        .minix-src/include/machine/setjmp.h
        .minix-src/include/machine/signal.h
        .minix-src/include/machine/sljit_machdep.h
        .minix-src/include/machine/specialreg.h
        .minix-src/include/machine/spkr.h
        .minix-src/include/machine/stackframe.h
        .minix-src/include/machine/svr4_machdep.h
        .minix-src/include/machine/sysarch.h
        .minix-src/include/machine/trap.h
        .minix-src/include/machine/tss.h
        .minix-src/include/machine/types.h
        .minix-src/include/machine/vm.h
        .minix-src/include/machine/vm86.h
        .minix-src/include/machine/vmparam.h
        .minix-src/include/machine/wchar_limits.h
        .minix-src/include/minix/acpi.h
        .minix-src/include/minix/audio_fw.h
        .minix-src/include/minix/bdev.h
        .minix-src/include/minix/bitmap.h
        .minix-src/include/minix/blockdriver.h
        .minix-src/include/minix/blockdriver_mt.h
        .minix-src/include/minix/board.h
        .minix-src/include/minix/bpf.h
        .minix-src/include/minix/btrace.h
        .minix-src/include/minix/callnr.h
        .minix-src/include/minix/chardriver.h
        .minix-src/include/minix/clkconf.h
        .minix-src/include/minix/com.h
        .minix-src/include/minix/config.h
        .minix-src/include/minix/const.h
        .minix-src/include/minix/cpufeature.h
        .minix-src/include/minix/debug.h
        .minix-src/include/minix/devio.h
        .minix-src/include/minix/devman.h
        .minix-src/include/minix/dmap.h
        .minix-src/include/minix/driver.h
        .minix-src/include/minix/drivers.h
        .minix-src/include/minix/drvlib.h
        .minix-src/include/minix/ds.h
        .minix-src/include/minix/endpoint.h
        .minix-src/include/minix/fb.h
        .minix-src/include/minix/fsdriver.h
        .minix-src/include/minix/fslib.h
        .minix-src/include/minix/gcov.h
        .minix-src/include/minix/gpio.h
        .minix-src/include/minix/hash.h
        .minix-src/include/minix/hgfs.h
        .minix-src/include/minix/i2c.h
        .minix-src/include/minix/i2cdriver.h
        .minix-src/include/minix/if.h
        .minix-src/include/minix/input.h
        .minix-src/include/minix/inputdriver.h
        .minix-src/include/minix/ioctl.h
        .minix-src/include/minix/ipc.h
        .minix-src/include/minix/ipc_filter.h
        .minix-src/include/minix/ipcconst.h
        .minix-src/include/minix/keymap.h
        .minix-src/include/minix/libminixfs.h
        .minix-src/include/minix/log.h
        .minix-src/include/minix/minlib.h
        .minix-src/include/minix/mmio.h
        .minix-src/include/minix/mthread.h
        .minix-src/include/minix/netdriver.h
        .minix-src/include/minix/optset.h
        .minix-src/include/minix/padconf.h
        .minix-src/include/minix/param.h
        .minix-src/include/minix/partition.h
        .minix-src/include/minix/paths.h
        .minix-src/include/minix/portio.h
        .minix-src/include/minix/priv.h
        .minix-src/include/minix/procfs.h
        .minix-src/include/minix/profile.h
        .minix-src/include/minix/rmib.h
        .minix-src/include/minix/rs.h
        .minix-src/include/minix/safecopies.h
        .minix-src/include/minix/sched.h
        .minix-src/include/minix/sef.h
        .minix-src/include/minix/sffs.h
        .minix-src/include/minix/sockdriver.h
        .minix-src/include/minix/sockevent.h
        .minix-src/include/minix/sound.h
        .minix-src/include/minix/spin.h
        .minix-src/include/minix/sys_config.h
        .minix-src/include/minix/sysctl.h
        .minix-src/include/minix/sysinfo.h
        .minix-src/include/minix/syslib.h
        .minix-src/include/minix/sysutil.h
        .minix-src/include/minix/timers.h
        .minix-src/include/minix/type.h
        .minix-src/include/minix/u64.h
        .minix-src/include/minix/usb.h
        .minix-src/include/minix/usb_ch9.h
        .minix-src/include/minix/vassert.h
        .minix-src/include/minix/vbox.h
        .minix-src/include/minix/vboxfs.h
        .minix-src/include/minix/vboxif.h
        .minix-src/include/minix/vboxtype.h
        .minix-src/include/minix/vfsif.h
        .minix-src/include/minix/virtio.h
        .minix-src/include/minix/vm.h
        .minix-src/include/minix/vtreefs.h
        .minix-src/include/msdosfs/bootsect.h
        .minix-src/include/msdosfs/bpb.h
        .minix-src/include/msdosfs/denode.h
        .minix-src/include/msdosfs/direntry.h
        .minix-src/include/msdosfs/fat.h
        .minix-src/include/msdosfs/msdosfsmount.h
        .minix-src/include/net/gen/arp_io.h
        .minix-src/include/net/gen/dhcp.h
        .minix-src/include/net/gen/eth_hdr.h
        .minix-src/include/net/gen/eth_io.h
        .minix-src/include/net/gen/ether.h
        .minix-src/include/net/gen/icmp.h
        .minix-src/include/net/gen/icmp_hdr.h
        .minix-src/include/net/gen/if_ether.h
        .minix-src/include/net/gen/in.h
        .minix-src/include/net/gen/inet.h
        .minix-src/include/net/gen/ip_hdr.h
        .minix-src/include/net/gen/ip_io.h
        .minix-src/include/net/gen/oneCsum.h
        .minix-src/include/net/gen/psip_hdr.h
        .minix-src/include/net/gen/psip_io.h
        .minix-src/include/net/gen/rip.h
        .minix-src/include/net/gen/route.h
        .minix-src/include/net/gen/socket.h
        .minix-src/include/net/gen/tcp.h
        .minix-src/include/net/gen/tcp_hdr.h
        .minix-src/include/net/gen/tcp_io.h
        .minix-src/include/net/gen/udp.h
        .minix-src/include/net/gen/udp_hdr.h
        .minix-src/include/net/gen/udp_io.h
        .minix-src/include/net/gen/udp_io_hdr.h
        .minix-src/include/net/gen/vjhc.h
        .minix-src/include/net/bpf.h
        .minix-src/include/net/bpfdesc.h
        .minix-src/include/net/bpfjit.h
        .minix-src/include/net/dlt.h
        .minix-src/include/net/ethertypes.h
        .minix-src/include/net/hton.h
        .minix-src/include/net/if.h
        .minix-src/include/net/if_arp.h
        .minix-src/include/net/if_dl.h
        .minix-src/include/net/if_ether.h
        .minix-src/include/net/if_ieee1394.h
        .minix-src/include/net/if_media.h
        .minix-src/include/net/if_pflog.h
        .minix-src/include/net/if_types.h
        .minix-src/include/net/netlib.h
        .minix-src/include/net/pfil.h
        .minix-src/include/net/pfkeyv2.h
        .minix-src/include/net/pfvar.h
        .minix-src/include/net/radix.h
        .minix-src/include/net/route.h
        .minix-src/include/net80211/_ieee80211.h
        .minix-src/include/net80211/ieee80211.h
        .minix-src/include/net80211/ieee80211_crypto.h
        .minix-src/include/net80211/ieee80211_ioctl.h
        .minix-src/include/net80211/ieee80211_netbsd.h
        .minix-src/include/netatalk/at.h
        .minix-src/include/netatalk/ddp_var.h
        .minix-src/include/netinet/icmp6.h
        .minix-src/include/netinet/icmp_var.h
        .minix-src/include/netinet/if_ether.h
        .minix-src/include/netinet/if_inarp.h
        .minix-src/include/netinet/igmp.h
        .minix-src/include/netinet/igmp_var.h
        .minix-src/include/netinet/in.h
        .minix-src/include/netinet/in_pcb.h
        .minix-src/include/netinet/in_pcb_hdr.h
        .minix-src/include/netinet/in_systm.h
        .minix-src/include/netinet/in_var.h
        .minix-src/include/netinet/ip.h
        .minix-src/include/netinet/ip6.h
        .minix-src/include/netinet/ip_carp.h
        .minix-src/include/netinet/ip_icmp.h
        .minix-src/include/netinet/ip_mroute.h
        .minix-src/include/netinet/ip_var.h
        .minix-src/include/netinet/pim_var.h
        .minix-src/include/netinet/tcp.h
        .minix-src/include/netinet/tcp_debug.h
        .minix-src/include/netinet/tcp_fsm.h
        .minix-src/include/netinet/tcp_seq.h
        .minix-src/include/netinet/tcp_timer.h
        .minix-src/include/netinet/tcp_var.h
        .minix-src/include/netinet/tcp_vtw.h
        .minix-src/include/netinet/tcpip.h
        .minix-src/include/netinet/udp.h
        .minix-src/include/netinet/udp_var.h
        .minix-src/include/netinet6/in6.h
        .minix-src/include/netinet6/in6_pcb.h
        .minix-src/include/netinet6/in6_var.h
        .minix-src/include/netinet6/ip6_mroute.h
        .minix-src/include/netinet6/ip6_var.h
        .minix-src/include/netinet6/nd6.h
        .minix-src/include/netinet6/pim6_var.h
        .minix-src/include/netinet6/raw_ip6.h
        .minix-src/include/netinet6/udp6.h
        .minix-src/include/netinet6/udp6_var.h
        .minix-src/include/netmpls/mpls.h
        .minix-src/include/netpgp/verify.h
        .minix-src/include/openssl/aes.h
        .minix-src/include/openssl/asn1.h
        .minix-src/include/openssl/asn1_mac.h
        .minix-src/include/openssl/asn1t.h
        .minix-src/include/openssl/bio.h
        .minix-src/include/openssl/blowfish.h
        .minix-src/include/openssl/bn.h
        .minix-src/include/openssl/buffer.h
        .minix-src/include/openssl/camellia.h
        .minix-src/include/openssl/cast.h
        .minix-src/include/openssl/cmac.h
        .minix-src/include/openssl/cms.h
        .minix-src/include/openssl/comp.h
        .minix-src/include/openssl/conf.h
        .minix-src/include/openssl/conf_api.h
        .minix-src/include/openssl/crypto.h
        .minix-src/include/openssl/des.h
        .minix-src/include/openssl/dh.h
        .minix-src/include/openssl/dsa.h
        .minix-src/include/openssl/dso.h
        .minix-src/include/openssl/dtls1.h
        .minix-src/include/openssl/e_os2.h
        .minix-src/include/openssl/ebcdic.h
        .minix-src/include/openssl/ec.h
        .minix-src/include/openssl/ecdh.h
        .minix-src/include/openssl/ecdsa.h
        .minix-src/include/openssl/engine.h
        .minix-src/include/openssl/err.h
        .minix-src/include/openssl/evp.h
        .minix-src/include/openssl/hmac.h
        .minix-src/include/openssl/idea.h
        .minix-src/include/openssl/krb5_asn.h
        .minix-src/include/openssl/kssl.h
        .minix-src/include/openssl/lhash.h
        .minix-src/include/openssl/md2.h
        .minix-src/include/openssl/md4.h
        .minix-src/include/openssl/md5.h
        .minix-src/include/openssl/mdc2.h
        .minix-src/include/openssl/modes.h
        .minix-src/include/openssl/obj_mac.h
        .minix-src/include/openssl/objects.h
        .minix-src/include/openssl/ocsp.h
        .minix-src/include/openssl/opensslconf.h
        .minix-src/include/openssl/opensslv.h
        .minix-src/include/openssl/ossl_typ.h
        .minix-src/include/openssl/pem.h
        .minix-src/include/openssl/pem2.h
        .minix-src/include/openssl/pkcs12.h
        .minix-src/include/openssl/pkcs7.h
        .minix-src/include/openssl/pqueue.h
        .minix-src/include/openssl/rand.h
        .minix-src/include/openssl/rc2.h
        .minix-src/include/openssl/rc4.h
        .minix-src/include/openssl/rc5.h
        .minix-src/include/openssl/ripemd.h
        .minix-src/include/openssl/rsa.h
        .minix-src/include/openssl/safestack.h
        .minix-src/include/openssl/seed.h
        .minix-src/include/openssl/sha.h
        .minix-src/include/openssl/srp.h
        .minix-src/include/openssl/srtp.h
        .minix-src/include/openssl/ssl.h
        .minix-src/include/openssl/ssl2.h
        .minix-src/include/openssl/ssl23.h
        .minix-src/include/openssl/ssl3.h
        .minix-src/include/openssl/stack.h
        .minix-src/include/openssl/store.h
        .minix-src/include/openssl/symhacks.h
        .minix-src/include/openssl/tls1.h
        .minix-src/include/openssl/ts.h
        .minix-src/include/openssl/txt_db.h
        .minix-src/include/openssl/ui.h
        .minix-src/include/openssl/ui_compat.h
        .minix-src/include/openssl/whrlpool.h
        .minix-src/include/openssl/x509.h
        .minix-src/include/openssl/x509_vfy.h
        .minix-src/include/openssl/x509v3.h
        .minix-src/include/pcap/bpf.h
        .minix-src/include/pcap/namedb.h
        .minix-src/include/pcap/pcap.h
        .minix-src/include/ppath/ppath.h
        .minix-src/include/ppath/ppath_impl.h
        .minix-src/include/prop/plistref.h
        .minix-src/include/prop/prop_array.h
        .minix-src/include/prop/prop_bool.h
        .minix-src/include/prop/prop_data.h
        .minix-src/include/prop/prop_dictionary.h
        .minix-src/include/prop/prop_ingest.h
        .minix-src/include/prop/prop_number.h
        .minix-src/include/prop/prop_object.h
        .minix-src/include/prop/prop_string.h
        .minix-src/include/prop/proplib.h
        .minix-src/include/protocols/dumprestore.h
        .minix-src/include/protocols/routed.h
        .minix-src/include/protocols/rwhod.h
        .minix-src/include/protocols/talkd.h
        .minix-src/include/protocols/timed.h
        .minix-src/include/readline/history.h
        .minix-src/include/readline/readline.h
        .minix-src/include/rpcsvc/yp_prot.h
        .minix-src/include/rpcsvc/ypclnt.h
        .minix-src/include/ssp/ssp.h
        .minix-src/include/ssp/stdio.h
        .minix-src/include/ssp/string.h
        .minix-src/include/ssp/strings.h
        .minix-src/include/ssp/unistd.h
        .minix-src/include/sys/acct.h
        .minix-src/include/sys/agpio.h
        .minix-src/include/sys/aio.h
        .minix-src/include/sys/ansi.h
        .minix-src/include/sys/aout_mids.h
        .minix-src/include/sys/asynchio.h
        .minix-src/include/sys/ataio.h
        .minix-src/include/sys/atomic.h
        .minix-src/include/sys/audioio.h
        .minix-src/include/sys/bitops.h
        .minix-src/include/sys/bootblock.h
        .minix-src/include/sys/bswap.h
        .minix-src/include/sys/buf.h
        .minix-src/include/sys/callback.h
        .minix-src/include/sys/callout.h
        .minix-src/include/sys/cdbr.h
        .minix-src/include/sys/cdefs.h
        .minix-src/include/sys/cdefs_aout.h
        .minix-src/include/sys/cdefs_elf.h
        .minix-src/include/sys/cdio.h
        .minix-src/include/sys/chio.h
        .minix-src/include/sys/clock.h
        .minix-src/include/sys/clockctl.h
        .minix-src/include/sys/common_ansi.h
        .minix-src/include/sys/common_int_const.h
        .minix-src/include/sys/common_int_fmtio.h
        .minix-src/include/sys/common_int_limits.h
        .minix-src/include/sys/common_int_mwgwtypes.h
        .minix-src/include/sys/common_int_types.h
        .minix-src/include/sys/common_limits.h
        .minix-src/include/sys/common_lock.h
        .minix-src/include/sys/common_wchar_limits.h
        .minix-src/include/sys/condvar.h
        .minix-src/include/sys/conf.h
        .minix-src/include/sys/core.h
        .minix-src/include/sys/cpufreq.h
        .minix-src/include/sys/cpuio.h
        .minix-src/include/sys/ctype_bits.h
        .minix-src/include/sys/ctype_inline.h
        .minix-src/include/sys/device.h
        .minix-src/include/sys/device_if.h
        .minix-src/include/sys/dir.h
        .minix-src/include/sys/dirent.h
        .minix-src/include/sys/disk.h
        .minix-src/include/sys/disklabel.h
        .minix-src/include/sys/disklabel_acorn.h
        .minix-src/include/sys/disklabel_gpt.h
        .minix-src/include/sys/disklabel_rdb.h
        .minix-src/include/sys/dkbad.h
        .minix-src/include/sys/dkio.h
        .minix-src/include/sys/dkstat.h
        .minix-src/include/sys/domain.h
        .minix-src/include/sys/drvctlio.h
        .minix-src/include/sys/dvdio.h
        .minix-src/include/sys/elf64.h
        .minix-src/include/sys/elf_common.h
        .minix-src/include/sys/elf_core.h
        .minix-src/include/sys/elf_generic.h
        .minix-src/include/sys/endian.h
        .minix-src/include/sys/envsys.h
        .minix-src/include/sys/errno.h
        .minix-src/include/sys/evcnt.h
        .minix-src/include/sys/event.h
        .minix-src/include/sys/exec.h
        .minix-src/include/sys/exec_aout.h
        .minix-src/include/sys/exec_coff.h
        .minix-src/include/sys/exec_ecoff.h
        .minix-src/include/sys/exec_elf.h
        .minix-src/include/sys/exec_script.h
        .minix-src/include/sys/extattr.h
        .minix-src/include/sys/extent.h
        .minix-src/include/sys/fcntl.h
        .minix-src/include/sys/fd_set.h
        .minix-src/include/sys/fdio.h
        .minix-src/include/sys/featuretest.h
        .minix-src/include/sys/file.h
        .minix-src/include/sys/filedesc.h
        .minix-src/include/sys/filio.h
        .minix-src/include/sys/flashio.h
        .minix-src/include/sys/float_ieee754.h
        .minix-src/include/sys/fstypes.h
        .minix-src/include/sys/gcq.h
        .minix-src/include/sys/gmon.h
        .minix-src/include/sys/gpio.h
        .minix-src/include/sys/hash.h
        .minix-src/include/sys/ieee754.h
        .minix-src/include/sys/intr.h
        .minix-src/include/sys/intrio.h
        .minix-src/include/sys/inttypes.h
        .minix-src/include/sys/ioc_block.h
        .minix-src/include/sys/ioc_disk.h
        .minix-src/include/sys/ioc_fb.h
        .minix-src/include/sys/ioc_fbd.h
        .minix-src/include/sys/ioc_file.h
        .minix-src/include/sys/ioc_memory.h
        .minix-src/include/sys/ioc_net.h
        .minix-src/include/sys/ioc_sound.h
        .minix-src/include/sys/ioc_tape.h
        .minix-src/include/sys/ioccom.h
        .minix-src/include/sys/ioctl.h
        .minix-src/include/sys/ioctl_compat.h
        .minix-src/include/sys/iostat.h
        .minix-src/include/sys/ipc.h
        .minix-src/include/sys/joystick.h
        .minix-src/include/sys/kbdio.h
        .minix-src/include/sys/kcore.h
        .minix-src/include/sys/kcpuset.h
        .minix-src/include/sys/kgdb.h
        .minix-src/include/sys/kmem.h
        .minix-src/include/sys/ksem.h
        .minix-src/include/sys/ksyms.h
        .minix-src/include/sys/ktrace.h
        .minix-src/include/sys/localedef.h
        .minix-src/include/sys/lock.h
        .minix-src/include/sys/lockf.h
        .minix-src/include/sys/lua.h
        .minix-src/include/sys/lwp.h
        .minix-src/include/sys/lwpctl.h
        .minix-src/include/sys/malloc.h
        .minix-src/include/sys/mallocvar.h
        .minix-src/include/sys/mbuf.h
        .minix-src/include/sys/md4.h
        .minix-src/include/sys/md5.h
        .minix-src/include/sys/midiio.h
        .minix-src/include/sys/mman.h
        .minix-src/include/sys/module.h
        .minix-src/include/sys/mount.h
        .minix-src/include/sys/mqueue.h
        .minix-src/include/sys/msg.h
        .minix-src/include/sys/msgbuf.h
        .minix-src/include/sys/mtio.h
        .minix-src/include/sys/mutex.h
        .minix-src/include/sys/namei.h
        .minix-src/include/sys/null.h
        .minix-src/include/sys/param.h
        .minix-src/include/sys/pcu.h
        .minix-src/include/sys/pipe.h
        .minix-src/include/sys/pmc.h
        .minix-src/include/sys/poll.h
        .minix-src/include/sys/pool.h
        .minix-src/include/sys/power.h
        .minix-src/include/sys/proc.h
        .minix-src/include/sys/procfs.h
        .minix-src/include/sys/protosw.h
        .minix-src/include/sys/pset.h
        .minix-src/include/sys/ptrace.h
        .minix-src/include/sys/ptree.h
        .minix-src/include/sys/queue.h
        .minix-src/include/sys/quota.h
        .minix-src/include/sys/quotactl.h
        .minix-src/include/sys/radioio.h
        .minix-src/include/sys/ras.h
        .minix-src/include/sys/rbtree.h
        .minix-src/include/sys/reboot.h
        .minix-src/include/sys/resource.h
        .minix-src/include/sys/resourcevar.h
        .minix-src/include/sys/rmd160.h
        .minix-src/include/sys/rnd.h
        .minix-src/include/sys/rndio.h
        .minix-src/include/sys/rwlock.h
        .minix-src/include/sys/scanio.h
        .minix-src/include/sys/sched.h
        .minix-src/include/sys/scsiio.h
        .minix-src/include/sys/sdt.h
        .minix-src/include/sys/select.h
        .minix-src/include/sys/selinfo.h
        .minix-src/include/sys/sem.h
        .minix-src/include/sys/sha1.h
        .minix-src/include/sys/sha2.h
        .minix-src/include/sys/shm.h
        .minix-src/include/sys/siginfo.h
        .minix-src/include/sys/signal.h
        .minix-src/include/sys/signalvar.h
        .minix-src/include/sys/sigtypes.h
        .minix-src/include/sys/sleepq.h
        .minix-src/include/sys/socket.h
        .minix-src/include/sys/socketvar.h
        .minix-src/include/sys/sockio.h
        .minix-src/include/sys/soundcard.h
        .minix-src/include/sys/spawn.h
        .minix-src/include/sys/specificdata.h
        .minix-src/include/sys/stat.h
        .minix-src/include/sys/statfs.h
        .minix-src/include/sys/statvfs.h
        .minix-src/include/sys/stdarg.h
        .minix-src/include/sys/stdbool.h
        .minix-src/include/sys/stdint.h
        .minix-src/include/sys/svrctl.h
        .minix-src/include/sys/swap.h
        .minix-src/include/sys/syncobj.h
        .minix-src/include/sys/syscall.h
        .minix-src/include/sys/syscallargs.h
        .minix-src/include/sys/sysctl.h
        .minix-src/include/sys/syslimits.h
        .minix-src/include/sys/syslog.h
        .minix-src/include/sys/tape.h
        .minix-src/include/sys/termios.h
        .minix-src/include/sys/time.h
        .minix-src/include/sys/timeb.h
        .minix-src/include/sys/timepps.h
        .minix-src/include/sys/times.h
        .minix-src/include/sys/timespec.h
        .minix-src/include/sys/timex.h
        .minix-src/include/sys/tls.h
        .minix-src/include/sys/trace.h
        .minix-src/include/sys/tree.h
        .minix-src/include/sys/tty.h
        .minix-src/include/sys/ttychars.h
        .minix-src/include/sys/ttycom.h
        .minix-src/include/sys/ttydefaults.h
        .minix-src/include/sys/ttydev.h
        .minix-src/include/sys/types.h
        .minix-src/include/sys/ucontext.h
        .minix-src/include/sys/ucred.h
        .minix-src/include/sys/uio.h
        .minix-src/include/sys/un.h
        .minix-src/include/sys/unistd.h
        .minix-src/include/sys/unpcb.h
        .minix-src/include/sys/user.h
        .minix-src/include/sys/utsname.h
        .minix-src/include/sys/uuid.h
        .minix-src/include/sys/vadvise.h
        .minix-src/include/sys/verified_exec.h
        .minix-src/include/sys/video.h
        .minix-src/include/sys/videoio.h
        .minix-src/include/sys/vmmeter.h
        .minix-src/include/sys/vnode.h
        .minix-src/include/sys/vnode_if.h
        .minix-src/include/sys/wait.h
        .minix-src/include/sys/wapbl.h
        .minix-src/include/sys/wapbl_replay.h
        .minix-src/include/sys/wdog.h
        .minix-src/include/sys/xattr.h
        .minix-src/include/ufs/ext2fs/ext2fs.h
        .minix-src/include/ufs/ext2fs/ext2fs_dinode.h
        .minix-src/include/ufs/ext2fs/ext2fs_dir.h
        .minix-src/include/ufs/ext2fs/ext2fs_extern.h
        .minix-src/include/ufs/ffs/ffs_extern.h
        .minix-src/include/ufs/ffs/fs.h
        .minix-src/include/ufs/lfs/lfs.h
        .minix-src/include/ufs/lfs/lfs_accessors.h
        .minix-src/include/ufs/lfs/lfs_extern.h
        .minix-src/include/ufs/lfs/lfs_inode.h
        .minix-src/include/ufs/mfs/mfs_extern.h
        .minix-src/include/ufs/mfs/mfsnode.h
        .minix-src/include/ufs/ufs/dinode.h
        .minix-src/include/ufs/ufs/dir.h
        .minix-src/include/ufs/ufs/extattr.h
        .minix-src/include/ufs/ufs/inode.h
        .minix-src/include/ufs/ufs/quota.h
        .minix-src/include/ufs/ufs/quota1.h
        .minix-src/include/ufs/ufs/quota2.h
        .minix-src/include/ufs/ufs/ufs_bswap.h
        .minix-src/include/ufs/ufs/ufs_extern.h
        .minix-src/include/ufs/ufs/ufs_wapbl.h
        .minix-src/include/ufs/ufs/ufsmount.h
        .minix-src/include/uvm/uvm.h
        .minix-src/include/uvm/uvm_amap.h
        .minix-src/include/uvm/uvm_anon.h
        .minix-src/include/uvm/uvm_aobj.h
        .minix-src/include/uvm/uvm_device.h
        .minix-src/include/uvm/uvm_extern.h
        .minix-src/include/uvm/uvm_fault.h
        .minix-src/include/uvm/uvm_fault_i.h
        .minix-src/include/uvm/uvm_glue.h
        .minix-src/include/uvm/uvm_km.h
        .minix-src/include/uvm/uvm_loan.h
        .minix-src/include/uvm/uvm_map.h
        .minix-src/include/uvm/uvm_object.h
        .minix-src/include/uvm/uvm_page.h
        .minix-src/include/uvm/uvm_pager.h
        .minix-src/include/uvm/uvm_param.h
        .minix-src/include/uvm/uvm_pdaemon.h
        .minix-src/include/uvm/uvm_pglist.h
        .minix-src/include/uvm/uvm_pmap.h
        .minix-src/include/uvm/uvm_prot.h
        .minix-src/include/uvm/uvm_stat.h
        .minix-src/include/uvm/uvm_swap.h
        .minix-src/include/x86/aout_machdep.h
        .minix-src/include/x86/bootinfo.h
        .minix-src/include/x86/cacheinfo.h
        .minix-src/include/x86/cpu.h
        .minix-src/include/x86/cpu_extended_state.h
        .minix-src/include/x86/cpu_ucode.h
        .minix-src/include/x86/cputypes.h
        .minix-src/include/x86/cpuvar.h
        .minix-src/include/x86/float.h
        .minix-src/include/x86/fpu.h
        .minix-src/include/x86/ieee.h
        .minix-src/include/x86/ieeefp.h
        .minix-src/include/x86/intr.h
        .minix-src/include/x86/intrdefs.h
        .minix-src/include/x86/lock.h
        .minix-src/include/x86/math.h
        .minix-src/include/x86/mtrr.h
        .minix-src/include/x86/mutex.h
        .minix-src/include/x86/pio.h
        .minix-src/include/x86/pmap.h
        .minix-src/include/x86/pmap_pv.h
        .minix-src/include/x86/psl.h
        .minix-src/include/x86/pte.h
        .minix-src/include/x86/rwlock.h
        .minix-src/include/x86/specialreg.h
        .minix-src/include/x86/sysarch.h
        .minix-src/include/x86/trap.h
        .minix-src/include/x86/via_padlock.h
        .minix-src/include/a.out.h
        .minix-src/include/aio.h
        .minix-src/include/ar.h
        .minix-src/include/archive.h
        .minix-src/include/archive_entry.h
        .minix-src/include/assert.h
        .minix-src/include/atf-c++.hpp
        .minix-src/include/atf-c.h
        .minix-src/include/atomic.h
        .minix-src/include/bitstring.h
        .minix-src/include/blacklist.h
        .minix-src/include/bm.h
        .minix-src/include/bzlib.h
        .minix-src/include/cdbr.h
        .minix-src/include/cdbw.h
        .minix-src/include/complex.h
        .minix-src/include/configfile.h
        .minix-src/include/cpio.h
        .minix-src/include/ctype.h
        .minix-src/include/curses.h
        .minix-src/include/db.h
        .minix-src/include/des.h
        .minix-src/include/dirent.h
        .minix-src/include/disktab.h
        .minix-src/include/dlfcn.h
        .minix-src/include/elf.h
        .minix-src/include/err.h
        .minix-src/include/errno.h
        .minix-src/include/eti.h
        .minix-src/include/evdns.h
        .minix-src/include/event.h
        .minix-src/include/evhttp.h
        .minix-src/include/evrpc.h
        .minix-src/include/evutil.h
        .minix-src/include/execinfo.h
        .minix-src/include/expat.h
        .minix-src/include/expat_external.h
        .minix-src/include/fcntl.h
        .minix-src/include/fenv.h
        .minix-src/include/fetch.h
        .minix-src/include/float.h
        .minix-src/include/fmtmsg.h
        .minix-src/include/fnmatch.h
        .minix-src/include/form.h
        .minix-src/include/fstab.h
        .minix-src/include/fts.h
        .minix-src/include/ftw.h
        .minix-src/include/fuse.h
        .minix-src/include/fuse_opt.h
        .minix-src/include/gelf.h
        .minix-src/include/getopt.h
        .minix-src/include/glob.h
        .minix-src/include/grp.h
        .minix-src/include/hesiod.h
        .minix-src/include/histedit.h
        .minix-src/include/iconv.h
        .minix-src/include/ieeefp.h
        .minix-src/include/ifaddrs.h
        .minix-src/include/inttypes.h
        .minix-src/include/iso646.h
        .minix-src/include/kvm.h
        .minix-src/include/langinfo.h
        .minix-src/include/lauxlib.h
        .minix-src/include/lib.h
        .minix-src/include/libelf.h
        .minix-src/include/libexec.h
        .minix-src/include/libgen.h
        .minix-src/include/libintl.h
        .minix-src/include/libutil.h
        .minix-src/include/limits.h
        .minix-src/include/link.h
        .minix-src/include/link_aout.h
        .minix-src/include/link_elf.h
        .minix-src/include/locale.h
        .minix-src/include/login_cap.h
        .minix-src/include/lua.h
        .minix-src/include/lua.hpp
        .minix-src/include/luaconf.h
        .minix-src/include/lualib.h
        .minix-src/include/lwp.h
        .minix-src/include/lzma.h
        .minix-src/include/magic.h
        .minix-src/include/malloc.h
        .minix-src/include/math.h
        .minix-src/include/md2.h
        .minix-src/include/md4.h
        .minix-src/include/md5.h
        .minix-src/include/memory.h
        .minix-src/include/menu.h
        .minix-src/include/mj.h
        .minix-src/include/mntopts.h
        .minix-src/include/monetary.h
        .minix-src/include/mpool.h
        .minix-src/include/mqueue.h
        .minix-src/include/ndbm.h
        .minix-src/include/netconfig.h
        .minix-src/include/netdb.h
        .minix-src/include/netgroup.h
        .minix-src/include/netpgp.h
        .minix-src/include/nl_types.h
        .minix-src/include/nlist.h
        .minix-src/include/nsswitch.h
        .minix-src/include/paths.h
        .minix-src/include/pcap-namedb.h
        .minix-src/include/pcap.h
        .minix-src/include/pci.h
        .minix-src/include/poll.h
        .minix-src/include/puffs.h
        .minix-src/include/pwd.h
        .minix-src/include/quota.h
        .minix-src/include/randomid.h
        .minix-src/include/ranlib.h
        .minix-src/include/re_comp.h
        .minix-src/include/regex.h
        .minix-src/include/regexp.h
        .minix-src/include/res_update.h
        .minix-src/include/resolv.h
        .minix-src/include/rmd160.h
        .minix-src/include/rmt.h
        .minix-src/include/saslc.h
        .minix-src/include/sched.h
        .minix-src/include/search.h
        .minix-src/include/semaphore.h
        .minix-src/include/setjmp.h
        .minix-src/include/sgtty.h
        .minix-src/include/sha1.h
        .minix-src/include/sha2.h
        .minix-src/include/signal.h
        .minix-src/include/soundcard.h
        .minix-src/include/spawn.h
        .minix-src/include/sqlite3.h
        .minix-src/include/sqlite3ext.h
        .minix-src/include/stab.h
        .minix-src/include/stdarg.h
        .minix-src/include/stdbool.h
        .minix-src/include/stddef.h
        .minix-src/include/stdint.h
        .minix-src/include/stdio.h
        .minix-src/include/stdlib.h
        .minix-src/include/string.h
        .minix-src/include/stringlist.h
        .minix-src/include/strings.h
        .minix-src/include/struct.h
        .minix-src/include/sysexits.h
        .minix-src/include/syslog.h
        .minix-src/include/tar.h
        .minix-src/include/tcpd.h
        .minix-src/include/term.h
        .minix-src/include/termcap.h
        .minix-src/include/termios.h
        .minix-src/include/time.h
        .minix-src/include/ttyent.h
        .minix-src/include/tzfile.h
        .minix-src/include/ucontext.h
        .minix-src/include/ucontextoffsets.h
        .minix-src/include/ulimit.h
        .minix-src/include/unctrl.h
        .minix-src/include/unistd.h
        .minix-src/include/unwind.h
        .minix-src/include/util.h
        .minix-src/include/utime.h
        .minix-src/include/utmp.h
        .minix-src/include/utmpx.h
        .minix-src/include/uuid.h
        .minix-src/include/varargs.h
        .minix-src/include/vis.h
        .minix-src/include/wchar.h
        .minix-src/include/wctype.h
        .minix-src/include/wordexp.h
        .minix-src/include/zconf.h
        .minix-src/include/zlib.h
        lab0/hello.c
        lab2/i8254.h
        lab2/lab2.c
        lab2/lab2.h
        lab2/timer.c
        lab2/timer.h
        lab2/utils.c
        lab2/utils.h
        lab3/i8042.h
        lab3/keyboard.c
        lab3/keyboard.h
        lab3/lab3.c
        lab3/utils.c
        lab3/utils.h)
